<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">Sudoku</string>
    <string name="hello_world">Hello world!</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="main_title">Android Sudoku</string>
    <string name="import_label">Import Grid</string>
    <string name="continue_label">Continue</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>

    <!-- About box -->
    <string name="about_title">About Android Sudoku</string>
    <string name="about_content">Sudoku is a logic-based number placement puzzle.
Starting with a partially completed 9x9 grid, the
objective is to fill the grid so that each
row, each column, and each of the 3x3 boxes
(also called <i>blocks</i>) contains the digits
1 to 9 exactly once.</string>

    <!-- Game -->
    <string name="game_title">Game</string>
    <string name="keypad_title">Select a number</string>
    
    <string name="take_picture_label">Take picture</string>
    

</resources>